--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E4F3F4"
-    tools:context=".MainActivity">
+    tools:context="de.famwienecke.doorcontrol.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
